syntax = "proto3";

package com.sharonsyra.protobuf.note;

message NoteCreated {
    string note_uuid = 1;
    string note_title = 2;
    string note_content = 3;
}

message NoteChanged {
    string note_uuid = 1;
    string note_title = 2;
    string note_content = 3;
}

message NoteDeleted {
    string note_uuid = 1;
}
